# xgplib-sync

./: .editorconfig  LICENSE  README.md  handler.py  pyproject.toml  serverless.yml
